--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,29 @@
 ---
 ---
-// TODO: Learn to work with CSS.
+
+// Display none.
+.d-none {
+	display: none;
+};
+
+// Unselected Button from the tabs.
+.btnTabs {
+	background-color: rgb(1, 167, 1);
+	color: rgb(44, 44, 44);
+	padding: 10px 35px;
+	text-align: center;
+	font-size: 20px;
+	cursor: pointer;
+};
+
+// Selected Button from the tabs.
+.selectedTab {
+	background-color: rgb(1, 167, 1);
+	border-color: rgb(0, 0, 0);
+	border-radius: 5mm;
+	color: rgb(44, 44, 44);
+	padding: 10px 35px;
+	text-align: center;
+	font-size: 20px;
+	cursor: pointer;
+};
