--- a/css/main.scss
+++ b/css/main.scss
@@ -6,10 +6,31 @@
 	display: none;
 };
 
+// Information box.
+.informationBox {
+	background-color: rgb(0, 120, 255);
+	border-radius: 4mm;
+	color: whitesmoke;
+};
+
+// UI.
+.UI {
+	background-color: rgb(0, 100, 255);
+};
+
+// Tab Background.
+.Tabs {
+	background-color: rgb(0, 70, 255);
+	border-radius: 8mm;
+	color: whitesmoke;
+};
+
 // Unselected Button from the tabs.
 .btnTabs {
-	background-color: rgb(1, 167, 1);
-	color: rgb(44, 44, 44);
+	background-color: rgb(100, 100, 100);
+	border-color: rgb(0, 0, 0);
+	border-radius: 5mm;
+	color: rgb(0, 0, 0);
 	padding: 10px 35px;
 	text-align: center;
 	font-size: 20px;
@@ -18,12 +39,20 @@
 
 // Selected Button from the tabs.
 .selectedTab {
-	background-color: rgb(1, 167, 1);
+	background-color: rgb(180, 180, 180);
 	border-color: rgb(0, 0, 0);
 	border-radius: 5mm;
 	color: rgb(44, 44, 44);
 	padding: 10px 35px;
 	text-align: center;
 	font-size: 20px;
+	cursor: pointer;
+};
+
+// Item canvas style.
+.ItemOutline {
+	background-color: black;
+	border-color: rgb(0, 0, 0);
+	border-radius: 5mm;
 	cursor: pointer;
 };
